Intermittent Quantumrender ASSERTION: Cannot find image bridge for process!: 'false', file /builds/worker/workspace/build/src/gfx/layers/ipc/ImageBridgeParent.cpp, line 397
Categories
(Core :: Graphics: WebRender, defect, P3)
Tracking
()
People
(Reporter: nataliaCs, Assigned: sotaro)
References
Details
Attachments
(1 file)
|
47 bytes,
text/x-phabricator-request
|
lizzard
:
approval-mozilla-beta+
|
Details | Review |
Comment 1•7 years ago
|
||
Comment 2•7 years ago
|
||
Updated•7 years ago
|
| Comment hidden (Intermittent Failures Robot) |
Comment 4•7 years ago
|
||
Comment 5•7 years ago
|
||
Comment 6•7 years ago
|
||
Comment 7•7 years ago
|
||
Comment 8•7 years ago
|
||
| Comment hidden (Intermittent Failures Robot) |
Comment 10•7 years ago
|
||
Comment 11•7 years ago
|
||
Updated•7 years ago
|
| Comment hidden (Intermittent Failures Robot) |
Updated•7 years ago
|
Comment 13•6 years ago
|
||
There are several reports with this assertion spam and a (random?) test failing (e.g. bug 1522767, bug 1522769).
Jeff, can you check what has changed, please?
Comment 14•6 years ago
|
||
No idea what would cause this. Sotaro, do you have any idea?
| Assignee | ||
Comment 15•6 years ago
•
|
||
I also do not have idea what cause this :(
default m-c caused a lot of intermittent failures on both Linux x64 QuantumRender debug and Linux x64 QuantumRender opt.
https://treeherder.mozilla.org/#/jobs?repo=try&revision=c9c42930de4e5663f0e2395bde9e331dd7c9a92c
In Linux x64 QuantumRender opt failures, there were "INFO - IOError on command, setting status to CRASH" message just before TEST-UNEXPECTED-CRASH.
| Assignee | ||
Comment 16•6 years ago
|
||
(In reply to Sotaro Ikeda [:sotaro] from comment #15)
I also do not have idea what cause this :(
default m-c caused a lot of intermittent failures on both Linux x64 QuantumRender debug and Linux x64 QuantumRender opt.
https://treeherder.mozilla.org/#/jobs?repo=try&revision=c9c42930de4e5663f0e2395bde9e331dd7c9a92c
I added the log and tried tests. Same failure happened on both Linux x64 QuantumRender debug and Linux x64 QuantumRender opt. And
ImageBridgeParent::GetInstance() was called for already destroyed ImageBridgeParent.
| Assignee | ||
Updated•6 years ago
|
| Assignee | ||
Comment 17•6 years ago
|
||
By try tests log, ImageBridgeParent::GetInstance() was called from ImageBridgeParent::NotifyImageComposites(). The NotifyImageComposites() seems to have a problem when ImageBridgeParent::GetInstance() fails.
| Assignee | ||
Comment 18•6 years ago
|
||
By comment 17, this bug needs to be addressed as part of Bug 1386669.
| Assignee | ||
Updated•6 years ago
|
| Assignee | ||
Updated•6 years ago
|
| Assignee | ||
Comment 19•6 years ago
|
||
| Assignee | ||
Comment 20•6 years ago
|
||
attachment 9040309 [details] addressed TEST-UNEXPECTED-CRASH failure.
Comment 21•6 years ago
|
||
Comment 22•6 years ago
|
||
| bugherder | ||
| Assignee | ||
Comment 23•6 years ago
|
||
Comment on attachment 9040309 [details]
Bug 1462885 - Fix iteration in ImageBridgeParent::NotifyImageComposites()
Beta/Release Uplift Approval Request
Feature/Bug causing the regression
User impact if declined
Whole firefox rendering could freeze after closing a window playing a video if WebRender is used. The problem could rarely happen also without WebRender.
Is this code covered by automated tests?
Yes
Has the fix been verified in Nightly?
Yes
Needs manual test from QE?
No
If yes, steps to reproduce
List of other uplifts needed
none
Risk to taking this patch
Low
Why is the change risky/not risky? (and alternatives if risky)
It is a simple fix to address iteration problem.
String changes made/needed
none
Updated•6 years ago
|
Comment 24•6 years ago
|
||
Comment on attachment 9040309 [details]
Bug 1462885 - Fix iteration in ImageBridgeParent::NotifyImageComposites()
Avoids a hang, let's uplift for beta 5.
Should also be helpful for WebRender experiments in 66.
| Comment hidden (Intermittent Failures Robot) |
Comment 26•6 years ago
|
||
| bugherder uplift | ||
Updated•6 years ago
|
Comment 27•6 years ago
|
||
:sotaro , the fail reappeared on mozilla-beta as a Tier2 failure.
Could you please take a look?
Log snippet:
[task 2019-02-06T12:43:15.361Z] 12:43:15 INFO - TEST-START | /html/webappapis/dynamic-markup-insertion/document-write/document.write-01.xhtml
[task 2019-02-06T12:43:15.389Z] 12:43:15 INFO - PID 7133 | [Child 7245, Main Thread] WARNING: NS_ENSURE_TRUE(domReturn) failed: file /builds/worker/workspace/build/src/dom/base/nsGlobalWindowOuter.cpp, line 7207
[task 2019-02-06T12:43:15.395Z] 12:43:15 INFO - PID 7133 | ++DOCSHELL 0x7fe8724cc000 == 1 [pid = 8743] [id = {7450fcb0-8dd7-45d0-bccf-77790f968ea2}]
[task 2019-02-06T12:43:15.476Z] 12:43:15 INFO - PID 7133 | ++DOMWINDOW == 1 (0x7fe87121b000) [pid = 8743] [serial = 1] [outer = (nil)]
[task 2019-02-06T12:43:15.518Z] 12:43:15 INFO - PID 7133 | ++DOMWINDOW == 2 (0x7fe871220000) [pid = 8743] [serial = 2] [outer = 0x7fe87121b000]
[task 2019-02-06T12:43:15.555Z] 12:43:15 INFO - PID 7133 | ### XPCOM_MEM_BLOAT_LOG defined -- logging bloat/leaks to /tmp/tmpr9N0u1.mozrunner/runtests_leaks_852_tab_pid8780.log
[task 2019-02-06T12:43:15.623Z] 12:43:15 INFO - PID 7133 | [Parent 7133, Compositor] ###!!! ASSERTION: Cannot find image bridge for process!: 'false', file /builds/worker/workspace/build/src/gfx/layers/ipc/ImageBridgeParent.cpp, line 363
[task 2019-02-06T12:43:15.816Z] 12:43:15 INFO - PID 7133 | --DOMWINDOW == 15 (0x7f7ba339b000) [pid = 8711] [serial = 14] [outer = (nil)] [url = http://web-platform.test:8000/images/red.png]
[task 2019-02-06T12:43:15.819Z] 12:43:15 INFO - PID 7133 | --DOCSHELL 0x7f7ba80a5800 == 4 [pid = 8711] [id = {774d9c15-d8ac-4fe3-9ee4-e95d5bcb2500}]
[task 2019-02-06T12:43:15.820Z] 12:43:15 INFO - PID 7133 | --DOMWINDOW == 14 (0x7f7ba6e17000) [pid = 8711] [serial = 1] [outer = (nil)] [url = http://web-platform.test:8000/html/webappapis/dynamic-markup-insertion/document-write/contentType.window.html]
[task 2019-02-06T12:43:15.821Z] 12:43:15 INFO - PID 7133 | --DOMWINDOW == 13 (0x7f7ba6e1c000) [pid = 8711] [serial = 2] [outer = (nil)] [url = about:blank]
[task 2019-02-06T12:43:15.823Z] 12:43:15 INFO - PID 7133 | --DOMWINDOW == 12 (0x7f7ba3398c00) [pid = 8711] [serial = 13] [outer = (nil)] [url = http://web-platform.test:8000/common/blank.html]
[task 2019-02-06T12:43:15.824Z] 12:43:15 INFO - PID 7133 | --DOMWINDOW == 11 (0x7f7ba6ecf000) [pid = 8711] [serial = 3] [outer = (nil)] [url = about:blank]
[task 2019-02-06T12:43:15.824Z] 12:43:15 INFO - PID 7133 | --DOCSHELL 0x7f7ba6aa0800 == 3 [pid = 8711] [id = {26ae7489-1bfc-4542-adc1-b7e82c723636}]
[task 2019-02-06T12:43:15.825Z] 12:43:15 INFO - PID 7133 | --DOMWINDOW == 10 (0x7f7ba6e23000) [pid = 8711] [serial = 5] [outer = (nil)] [url = http://web-platform.test:8000/images/pattern.ogv]
[task 2019-02-06T12:43:15.825Z] 12:43:15 INFO - PID 7133 | --DOMWINDOW == 9 (0x7f7ba6ecfc00) [pid = 8711] [serial = 6] [outer = (nil)] [url = about:blank]
[task 2019-02-06T12:43:15.825Z] 12:43:15 INFO - PID 7133 | --DOMWINDOW == 8 (0x7f7ba3338000) [pid = 8711] [serial = 16] [outer = (nil)] [url = http://web-platform.test:8000/common/text-plain.txt]
[task 2019-02-06T12:43:15.825Z] 12:43:15 INFO - PID 7133 | --DOCSHELL 0x7f7ba743c800 == 2 [pid = 8711] [id = {889b4f91-d03d-4814-9210-1f30d2a4f8e6}]
[task 2019-02-06T12:43:15.826Z] 12:43:15 INFO - PID 7133 | --DOMWINDOW == 7 (0x7f7ba805b800) [pid = 8711] [serial = 7] [outer = (nil)] [url = http://web-platform.test:8000/images/red.png]
[task 2019-02-06T12:43:15.826Z] 12:43:15 INFO - PID 7133 | --DOMWINDOW == 6 (0x7f7ba805c800) [pid = 8711] [serial = 8] [outer = (nil)] [url = about:blank]
[task 2019-02-06T12:43:15.826Z] 12:43:15 INFO - PID 7133 | --DOCSHELL 0x7f7ba7445800 == 1 [pid = 8711] [id = {869207e0-f96f-4f3e-a1b5-4d7a082cdecb}]
[task 2019-02-06T12:43:15.826Z] 12:43:15 INFO - PID 7133 | --DOMWINDOW == 5 (0x7f7ba805f800) [pid = 8711] [serial = 9] [outer = (nil)] [url = http://web-platform.test:8000/common/text-plain.txt]
[task 2019-02-06T12:43:15.826Z] 12:43:15 INFO - PID 7133 | --DOMWINDOW == 4 (0x7f7ba805fc00) [pid = 8711] [serial = 10] [outer = (nil)] [url = about:blank]
[task 2019-02-06T12:43:15.830Z] 12:43:15 INFO - PID 7133 | --DOCSHELL 0x7f7ba7447800 == 0 [pid = 8711] [id = {cde748ae-295a-4b11-8f97-f2d4b3ec9897}]
[task 2019-02-06T12:43:15.830Z] 12:43:15 INFO - PID 7133 | --DOMWINDOW == 3 (0x7f7bbf0d0000) [pid = 8711] [serial = 11] [outer = (nil)] [url = http://web-platform.test:8000/common/blank.html]
[task 2019-02-06T12:43:15.831Z] 12:43:15 INFO - PID 7133 | --DOMWINDOW == 2 (0x7f7ba6ece000) [pid = 8711] [serial = 12] [outer = (nil)] [url = about:blank]
[task 2019-02-06T12:43:15.831Z] 12:43:15 INFO - PID 7133 | --DOMWINDOW == 1 (0x7f7ba33e1800) [pid = 8711] [serial = 15] [outer = (nil)] [url = http://web-platform.test:8000/images/pattern.ogv]
[task 2019-02-06T12:43:15.832Z] 12:43:15 INFO - PID 7133 | --DOMWINDOW == 0 (0x7f7ba6e21400) [pid = 8711] [serial = 4] [outer = (nil)] [url = http://web-platform.test:8000/html/webappapis/dynamic-markup-insertion/document-write/contentType.window.html]
[task 2019-02-06T12:43:15.861Z] 12:43:15 INFO - PID 7133 | Couldn't convert chrome URL: chrome://branding/locale/brand.properties
[task 2019-02-06T12:43:15.879Z] 12:43:15 INFO - PID 7133 | nsStringStats
[task 2019-02-06T12:43:15.879Z] 12:43:15 INFO - PID 7133 | => mAllocCount: 10443
[task 2019-02-06T12:43:15.880Z] 12:43:15 INFO - PID 7133 | => mReallocCount: 0
[task 2019-02-06T12:43:15.880Z] 12:43:15 INFO - PID 7133 | => mFreeCount: 10443
[task 2019-02-06T12:43:15.882Z] 12:43:15 INFO - PID 7133 | => mShareCount: 9482
[task 2019-02-06T12:43:15.883Z] 12:43:15 INFO - PID 7133 | => mAdoptCount: 487
[task 2019-02-06T12:43:15.883Z] 12:43:15 INFO - PID 7133 | => mAdoptFreeCount: 523
[task 2019-02-06T12:43:15.883Z] 12:43:15 INFO - PID 7133 | => Process ID: 8711, Thread ID: 140169486419776
[task 2019-02-06T12:43:15.932Z] 12:43:15 INFO - PID 7133 | ++DOMWINDOW == 3 (0x7fe8713ce000) [pid = 8743] [serial = 3] [outer = 0x7fe87121b000]
[task 2019-02-06T12:43:16.030Z] 12:43:16 INFO - PID 7133 | [Child 8743, Main Thread] WARNING: site security information will not be persisted: file /builds/worker/workspace/build/src/security/manager/ssl/nsSiteSecurityService.cpp, line 506
[task 2019-02-06T12:43:16.031Z] 12:43:16 INFO - PID 7133 | [Parent 7133, Main Thread] WARNING: 'NS_FAILED(rv)', file /builds/worker/workspace/build/src/netwerk/url-classifier/UrlClassifierCommon.cpp, line 125
[task 2019-02-06T12:43:16.047Z] 12:43:16 INFO - PID 7133 | ++DOMWINDOW == 4 (0x7fe871224c00) [pid = 8743] [serial = 4] [outer = 0x7fe87121b000]
[task 2019-02-06T12:43:16.185Z] 12:43:16 INFO - Closing window 115964116993
[task 2019-02-06T12:43:16.248Z] 12:43:16 INFO - PID 7133 | [Child 8743, Main Thread] WARNING: NS_ENSURE_TRUE(maybeContext) failed: file /builds/worker/workspace/build/src/xpcom/threads/nsThread.cpp, line 869
[task 2019-02-06T12:43:16.264Z] 12:43:16 INFO - Got chrome assert count 1
[task 2019-02-06T12:43:16.282Z] 12:43:16 INFO - TEST-UNEXPECTED-FAIL | /html/webappapis/dynamic-markup-insertion/document-write/document.write-01.xhtml | assertion count 1 is more than expected 0 assertions
[task 2019-02-06T12:43:16.283Z] 12:43:16 INFO - .
[task 2019-02-06T12:43:16.284Z] 12:43:16 INFO - TEST-OK | /html/webappapis/dynamic-markup-insertion/document-write/document.write-01.xhtml | took 920ms
| Assignee | ||
Comment 29•6 years ago
•
|
||
(In reply to Narcis Beleuzu [:NarcisB] from comment #27)
:sotaro , the fail reappeared on mozilla-beta as a Tier2 failure.
Could you please take a look?
The fix addresses the infinite loop in ImageBridgeParent::NotifyImageComposites(), but "Cannot find image bridge for process" could sometimes happen with WebRender because of its architecture. It seems better to change NS_ASSERTION to NS_WARNING.
| Assignee | ||
Comment 30•6 years ago
|
||
Created Bug 1525818 for comment 29.
| Comment hidden (Intermittent Failures Robot) |
Description
•