Bug 1462885 - Fix iteration in ImageBridgeParent::NotifyImageComposites() r=mattwoodrow a=lizzard

Iteration becomes wrong when ImageBridgeParent::GetInstance() fails in NotifyImageComposites().

Differential Revision: https://phabricator.services.mozilla.com/D18172

--HG--
extra : rebase_source : b78cb548f9e41cddfe5357cb0e2961a3b875d49b
extra : source : 1285ba28ba4baaee6f38c3d3e5e445782f1e6280